refactor: separate NullabilityIssue and clean up NullabilityChecker
- Introduce IssueCode and Severity fields to NullabilityIssue
- Refactor and simplify NullabilityChecker implementation